@@ -1,11 +1,11 @@
 package com.sammy.minersdelight.content.loot;
 
-import com.google.common.collect.*;
-import com.google.gson.*;
-import net.minecraft.core.*;
+import com.mojang.serialization.*;
+import com.mojang.serialization.codecs.*;
+import com.sammy.minersdelight.setup.*;
+import net.minecraft.core.registries.*;
 import net.minecraft.resources.*;
 import net.minecraft.tags.*;
-import net.minecraft.util.*;
 import net.minecraft.world.level.block.*;
 import net.minecraft.world.level.block.state.*;
 import net.minecraft.world.level.storage.loot.*;
@@ -14,39 +14,53 @@ import net.minecraft.world.level.storage.loot.predicates.*;
 
 import java.util.*;
 
-public class LootItemBlockTagCondition implements LootItemCondition {
+public final class LootItemBlockTagCondition implements LootItemCondition {
+   public static final MapCodec<LootItemBlockTagCondition> CODEC = RecordCodecBuilder.mapCodec(
+           obj -> obj.group(
+                           ResourceLocation.CODEC.fieldOf("tag").forGetter(LootItemBlockTagCondition::tag)
+                   )
+                   .apply(obj, LootItemBlockTagCondition::new)
+   );
+   private final TagKey<Block> tag;
 
-   public static final LootItemConditionType BLOCK_TAG = new LootItemConditionType(new LootItemBlockTagCondition.Serializer());
 
-   final TagKey<Block> blockTagKey;
-   LootItemBlockTagCondition(TagKey<Block> blockTagKey) {
-      this.blockTagKey = blockTagKey;
+   public LootItemBlockTagCondition(ResourceLocation tag) {
+      this.tag = TagKey.create(BuiltInRegistries.BLOCK.key(), tag);
    }
 
+   @Override
    public LootItemConditionType getType() {
-      return BLOCK_TAG;
+      return MDLootConditions.BLOCK_TAG_CONDITION.get();
    }
 
-   /**
-    * Get the parameters used by this object.
-    */
+   @Override
    public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.BLOCK_STATE);
+      return Set.of(LootContextParams.BLOCK_STATE);
    }
 
-   public boolean test(LootContext p_81772_) {
-      BlockState blockstate = p_81772_.getParamOrNull(LootContextParams.BLOCK_STATE);
-      return blockstate != null && blockstate.is(blockTagKey);
+   public boolean test(LootContext context) {
+      BlockState blockstate = context.getParamOrNull(LootContextParams.BLOCK_STATE);
+      return blockstate != null && blockstate.is(tag);
    }
 
-   public static class Serializer implements net.minecraft.world.level.storage.loot.Serializer<LootItemBlockTagCondition> {
-      public void serialize(JsonObject p_81795_, LootItemBlockTagCondition p_81796_, JsonSerializationContext p_81797_) {
-         p_81795_.addProperty("block_tag", p_81796_.blockTagKey.location().toString());
+   public static Builder hasBlockStateProperties(TagKey<Block> tag) {
+      return new Builder(tag);
+   }
+
+   public ResourceLocation tag() {
+      return tag.location();
+   }
+
+   public static class Builder implements LootItemCondition.Builder {
+      private final TagKey<Block> tag;
+
+      public Builder(TagKey<Block> tag) {
+         this.tag = tag;
       }
 
-      public LootItemBlockTagCondition deserialize(JsonObject p_81805_, JsonDeserializationContext p_81806_) {
-         ResourceLocation resourcelocation = new ResourceLocation(GsonHelper.getAsString(p_81805_, "block_tag"));
-         return new LootItemBlockTagCondition(TagKey.create(Registry.BLOCK_REGISTRY, resourcelocation));
+      @Override
+      public LootItemCondition build() {
+         return new LootItemBlockTagCondition(tag.location());
       }
    }
 }
